<resources>
    <string name="app_name">My Health Application</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- MedplanActivity -->
    <string name="change_settings_text">Change Settings</string>
    <string name="scan_medplan_text">Medikationsplan scannen</string>
    <string name="neuer_medikationsplan">Neuer Medikationsplan</string>
    <string name="update">Update</string>

    <!-- SettingsActivity -->
    <string name="btn_aendern">ändern</string>
    <string name="default_morgens">08:00</string>
    <string name="default_mittags">13:00</string>
    <string name="default_abends">18:00</string>
    <string name="default_zur_nacht">22:00</string>
    <string name="morgens_colon">morgens:</string>
    <string name="mittags_colon">mittags:</string>
    <string name="abends_colon">abends:</string>
    <string name="zur_nacht_colon">zur Nacht:</string>

    <!-- MainActivity -->
    <string name="btn_mainAct">Zum Medplan</string>
    <string name="et_mainAct">Name</string>
    <string name="tv_mainAct">User Access Token</string>
    <string name="tv_arzt">Ausstellender Arzt:</string>
    <string name="tv_patient">Ausgestellt für:</string>
    <string name="tvUAT">UAT</string>
    <string name="prompt_text_tvUAT">ABC123</string>

</resources>
